--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-responsive-carousel": "^3.2.20"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
