--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-responsive-carousel": "^3.2.20"
+    "react-multi-carousel": "^2.6.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.1",
