--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-multi-carousel": "^2.6.3"
   },
   "devDependencies": {
+    "@souadiferenca/sou-commit": "^1.1.0",
     "autoprefixer": "^10.3.1",
     "gatsby-plugin-postcss": "^4.10.0",
     "postcss": "^8.3.6",
